fix(user handler): change api response using error response struct, set new response format in docs
